recursion.cons.nth.Nth.scala.error
Erreur de compilation :
Nth:5: error: type mismatch;
 found   : scala.collection.immutable.Nil.type
 required: Int
      return Nil
             ^Nth:9: error: type mismatch;
 found   : Unit
 required: Int
    if(n==0)
    ^