recursion.cons.nth.Nth.scala.code
def nth(l:List[Int], n:Int): Int = {
  
  if(l == Nil){
      return Nil
  }

  else{
    if(n==0)
    return l.head
  }
}